# sus-search

./: .env.example  .gitignore  .mcp_test  README.md  docker-compose.yml  render.yaml
.github/workflows/: deploy.yml  tests.yml  update-data.yml
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ask.py  fhir.py  health.py  search.py  sources.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  term.py
backend/app/repositories/: term_repository.py
backend/app/schemas/: __init__.py  search.py
backend/app/services/: ask_service.py  fhir_service.py  llm_service.py  search_service.py
backend/etl/: __init__.py  base.py  ciap2.py  cnes.py  demas_client.py  demas_cnes.py  run_all.py  sigtap.py  sigtap_load_patch.py
backend/scripts/: check_updates.py  verify_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_db_operations.py  test_search_api.py
backend/tests/unit/: test_search_service.py  test_term_repository.py
backend/tests/unit/test_etl/: test_cnes_parser.py  test_sigtap_parser.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AIConfigModal.tsx  AskPanel.tsx  EmptyState.tsx  FHIRModal.tsx  LoadingSpinner.tsx  Pagination.tsx  ResultCard.tsx  SearchBar.tsx  (+2 more)
nginx/: nginx.conf
scripts/: init.sh  update_data.sh  validate.sh
(+9 files in other folders)
