[project]
name = "sus-search"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "python-dotenv==1.0.1",
    "lxml==5.2.2",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=app --cov=etl --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*/migrations/*"]
